--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NicolasDev1999.github.io/Page202409",
+  "homepage": "https://NicolasDev1999.github.io/VisionaryByte",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -48,6 +48,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.3.0"
   }
 }
